Updated handle styling with drop shadow and lines.

--- a/css/px-handle.css
+++ b/css/px-handle.css
@@ -55,21 +55,28 @@ Predix branding rules go in px-slider-predix.scss, not in this file.
   position: absolute;
   top: -6px; }
 
-.px-handle {
+#handleTarget {
   height: 19px;
   width: 19px;
   border: 1px solid #b1b1bc;
   background-color: white;
-  border-radius: 3px; }
+  border-radius: 3px;
+  box-shadow: 0 1px 1px #D9D9D9;
+  fill: #b1b1bc; }
 
-.px-handle:hover {
+#handleTarget:hover {
   border-color: #9999a3;
-  background-color: #b1b1bc; }
+  background-color: #b1b1bc;
+  fill: #9999a3; }
 
-.px-handle.tracking {
+#handleTarget.tracking {
   border-color: #7c7c84;
-  background-color: #9999a3; }
+  background-color: #9999a3;
+  box-shadow: none;
+  fill: #7c7c84; }
 
-.px-handle.disabled {
+#handleTarget.disabled {
   border-color: #d1d0d8;
-  background-color: white; }
+  background-color: white;
+  box-shadow: none;
+  fill: #d1d0d8; }
