Fix for focus on page issue - switch handle to be a button solves it. Refactor SCSS into themed/sketch.

--- a/css/px-handle.css
+++ b/css/px-handle.css
@@ -64,6 +64,9 @@ Predix branding rules go in px-slider-predix.scss, not in this file.
   box-shadow: 0 1px 1px #D9D9D9;
   fill: #b1b1bc; }
 
+#handleTarget:focus {
+  outline: 0; }
+
 #handleTarget:hover {
   border-color: #9999a3;
   background-color: #b1b1bc;
