--- a/sass/px-slider-predix.scss
+++ b/sass/px-slider-predix.scss
@@ -23,3 +23,18 @@ common/abstract rules go in px-slider-sketch.scss, not in this file.
 @import "px-colors-design/_settings.colors.scss";
 
 @import 'px-slider-sketch.scss';
+
+.slider {
+  border: 1px solid $gray5;
+  background-color: $gray1;
+}
+
+.slider-selected {
+  border: 1px solid $select-blue-pressed;
+  background-color: $select-blue-default;
+}
+
+.slider-value {
+  border: 1px solid $gray5;
+  background-color: $gray1;
+}
