--- a/css/px-slider.css
+++ b/css/px-slider.css
@@ -778,7 +778,7 @@ sub {
   .btn:hover,
   .btn:focus,
   .btn:active {
-    color: #3b3b3f; }
+    color: black; }
   .btn:hover,
   .btn:focus {
     border-color: #9999a3;
@@ -788,6 +788,9 @@ sub {
     border-color: #7c7c84;
     box-shadow: none;
     background-color: #9999a3; }
+  .btn:active,
+  .btn:focus {
+    outline: none; }
 
 button.btn {
   -webkit-appearance: button; }
