--- a/css/px-slider-sketch.css
+++ b/css/px-slider-sketch.css
@@ -183,7 +183,9 @@ html {
   /*! Comment to prevent cssmin munging this rule with html above and borking Safari */
   box-sizing: border-box; }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit; }
 
 .flex {
@@ -424,9 +426,9 @@ textarea {
   box-shadow: inset 0 0 0 1px #e4e4ea;
   background-color: #efeff4;
   color: black; }
-  .text-input[readonly], .text-input[disabled],
-  textarea[readonly],
-  textarea[disabled] {
+  .text-input[readonly],
+  .text-input[disabled],
+  textarea[readonly], textarea[disabled] {
     box-shadow: none; }
   .text-input[readonly],
   textarea[readonly] {
@@ -481,10 +483,14 @@ select {
     cursor: pointer;
     background: #f7f7fc; }
 
+select::-ms-expand {
+  display: none; }
+
 .text-input {
   height: 2em;
   line-height: 1; }
-  .text-input + [type=checkbox], .text-input + [type=radio] {
+  .text-input + [type=checkbox],
+  .text-input + [type=radio] {
     margin-left: 1.3333333333rem; }
   .text-input + .label--inline {
     margin-left: 0.6666666667rem; }
@@ -496,7 +502,8 @@ select {
   .text-input:-moz-placeholder {
     padding-top: 1px; }
 
-.text-input + [type=submit], .text-input [type=cancel],
+.text-input + [type=submit],
+.text-input [type=cancel],
 .label--inline + [type=submit],
 .label--inline [type=cancel] {
   margin-left: 1.3333333333rem; }
@@ -514,7 +521,8 @@ textarea {
   cursor: pointer; }
   [type=checkbox][disabled], [type=radio][disabled] {
     cursor: not-allowed; }
-    [type=checkbox][disabled] + .label--inline, [type=radio][disabled] + .label--inline {
+    [type=checkbox][disabled] + .label--inline,
+    [type=radio][disabled] + .label--inline {
       cursor: not-allowed; }
 
 [type=checkbox] + .label--inline {
