--- a/css/px-slider.css
+++ b/css/px-slider.css
@@ -234,9 +234,7 @@ html {
   /*! Comment to prevent cssmin munging this rule with html above and borking Safari */
   box-sizing: border-box; }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
   box-sizing: inherit; }
 
 .flex {
@@ -439,9 +437,9 @@ textarea {
   box-shadow: inset 0 0 0 1px #e4e4ea;
   background-color: #efeff4;
   color: black; }
-  .text-input[readonly],
-  .text-input[disabled],
-  textarea[readonly], textarea[disabled] {
+  .text-input[readonly], .text-input[disabled],
+  textarea[readonly],
+  textarea[disabled] {
     box-shadow: none; }
   .text-input[readonly],
   textarea[readonly] {
@@ -502,8 +500,7 @@ select::-ms-expand {
 .text-input {
   height: 2em;
   line-height: 1; }
-  .text-input + [type=checkbox],
-  .text-input + [type=radio] {
+  .text-input + [type=checkbox], .text-input + [type=radio] {
     margin-left: 1.3333333333rem; }
   .text-input + .label--inline {
     margin-left: 0.6666666667rem; }
@@ -515,8 +512,7 @@ select::-ms-expand {
   .text-input:-moz-placeholder {
     padding-top: 1px; }
 
-.text-input + [type=submit],
-.text-input [type=cancel],
+.text-input + [type=submit], .text-input [type=cancel],
 .label--inline + [type=submit],
 .label--inline [type=cancel] {
   margin-left: 1.3333333333rem; }
@@ -534,8 +530,7 @@ textarea {
   cursor: pointer; }
   [type=checkbox][disabled], [type=radio][disabled] {
     cursor: not-allowed; }
-    [type=checkbox][disabled] + .label--inline,
-    [type=radio][disabled] + .label--inline {
+    [type=checkbox][disabled] + .label--inline, [type=radio][disabled] + .label--inline {
       cursor: not-allowed; }
 
 [type=checkbox] + .label--inline {
@@ -577,6 +572,12 @@ textarea {
   border-width: 1px 0 1px 1px;
   border-style: solid;
   border-radius: 2px 0 0 2px; }
+
+.slider__multi {
+  margin: 0.6666666667rem 1rem; }
+  .slider__multi .slider__selected {
+    border-radius: 2px 2px 2px 2px;
+    border-width: 1px 1px 1px 1px; }
 
 .text-input {
   width: 4.3333333333rem; }
