--- a/sass/px-handle.scss
+++ b/sass/px-handle.scss
@@ -31,6 +31,14 @@ Predix branding rules go in px-slider-predix.scss, not in this file.
   position: absolute;
   top: -#{calculateRem(6px)};
   display: inline-block;
+  &.start{
+    top: $inuit-base-spacing-unit--large*0.4;
+    margin-left:$inuit-base-spacing-unit--large*-0.48;
+  }
+  &.end{
+    top: -$inuit-base-spacing-unit--large;
+    margin-left:$inuit-base-spacing-unit--large*-0.48;
+  }
 }
 
 #handleTarget {
@@ -42,6 +50,26 @@ Predix branding rules go in px-slider-predix.scss, not in this file.
   background-color: $white;
   fill: $gray5;
   cursor: pointer;
+
+  .handleLines{
+    stroke:$gray5;
+    fill:none;
+    stroke-miterlimit:10;
+  }
+  #handleDropShadow{
+    opacity:0.15;
+    mix-blend-mode:multiply;
+    stroke:$black;
+    fill:$black;
+    stroke-miterlimit:10;
+  }
+  #handleBody{
+    fill:$white;
+    stroke:$gray5;
+    stroke-miterlimit:10;
+  }
+
+
   &:focus {
     outline: 0;
   }
@@ -49,6 +77,13 @@ Predix branding rules go in px-slider-predix.scss, not in this file.
     border-color: $gray6;
     background-color: $gray5;
     svg {
+      stroke: $gray6;
+    }
+    .handleLines{
+      stroke:$gray6;
+    }
+    #handleBody{
+      fill: $gray5;
       stroke: $gray6;
     }
   }
@@ -59,6 +94,13 @@ Predix branding rules go in px-slider-predix.scss, not in this file.
     svg {
       stroke: $gray7;
     }
+    .handleLines{
+      stroke:$gray7;
+    }
+    #handleBody{
+      fill:$gray6;
+      stroke:$gray7;
+    }
   }
   &.disabled {
     border-color: $gray4;
@@ -66,6 +108,31 @@ Predix branding rules go in px-slider-predix.scss, not in this file.
     box-shadow: none;
     svg {
       stroke: $gray4;
+    }
+    .handleLines{
+      stroke:$gray4;
+    }
+    #handleBody{
+      fill:$white;
+      stroke:$gray4;
+    }
+  }
+}
+
+#multiHandleSVG{
+  height: $inuit-base-spacing-unit--large*1.1;
+  width: $inuit-base-spacing-unit--large;
+  &.start{
+    transform: rotate(180deg);
+
+    #handleTarget{
+      // transform:translate(0,$inuit-base-spacing-unit--large*(0.1))
+        transform:translate($inuit-base-spacing-unit--large*(0.03),$inuit-base-spacing-unit--large*(0.13))
+    }
+  }
+  &.end{
+    #handleTarget{
+        // transform:translate($inuit-base-spacing-unit--large*(0.1),0)
     }
   }
 }
