--- a/sass/px-handle.scss
+++ b/sass/px-handle.scss
@@ -122,6 +122,7 @@ Predix branding rules go in px-slider-predix.scss, not in this file.
 #multiHandleSVG{
   height: $inuit-base-spacing-unit--large*1.1;
   width: $inuit-base-spacing-unit--large;
+  -moz-user-select: none;
   &.start{
     transform: rotate(180deg);
 
