--- a/sass/px-handle.scss
+++ b/sass/px-handle.scss
@@ -25,6 +25,10 @@ Predix branding rules go in px-slider-predix.scss, not in this file.
 // // Generic
 // @import "px-normalize-design/_generic.normalize.scss";
 // @import "px-box-sizing-design/_generic.box-sizing.scss";
+// Generic
+@import "px-colors-design/_settings.colors.scss";
+@import "px-defaults-design/_settings.defaults.scss";
+
 
 // Component
 :host {
