--- a/sass/px-slider-predix.scss
+++ b/sass/px-slider-predix.scss
@@ -17,7 +17,7 @@
 /*
 THIS FILE SHOULD CONTAIN ONLY RULES SPECIFIC TO PREDIX BRANDING
 common/abstract rules go in px-slider-sketch.scss, not in this file.
-*/ 
+*/
 
 // Settings
 @import "px-colors-design/_settings.colors.scss";
@@ -25,11 +25,11 @@ common/abstract rules go in px-slider-sketch.scss, not in this file.
 @import 'px-slider-sketch.scss';
 
 .slider {
-  border-color: $gray5;
-  background-color: $gray1;
+  border-color: var(--px-slider-border-color, $gray5);
+  background-color: var(--px-slider-background-color, $gray1);
 }
 
 .slider__selected {
-  border-color: $select-blue-pressed;
-  background-color: $select-blue-default;
+  border-color: var(--px-slider-selected-border-color, $select-blue-pressed);
+  background-color: var(--px-slider-selected-background-color, $select-blue-default);
 }
