--- a/sass/px-handle.scss
+++ b/sass/px-handle.scss
@@ -87,7 +87,7 @@ $px-handle-black : var(--px-handle-shadow-color, $black);
   }
   &:hover {
     border-color: $px-handle-gray6;
-    background-color: $px-handle-gray5;
+    background-color: var(--px-handle-background-color--hover, $gray5);;
     svg {
       stroke: $px-handle-gray6;
     }
