--- a/sass/px-slider-predix.scss
+++ b/sass/px-slider-predix.scss
@@ -24,12 +24,12 @@ common/abstract rules go in px-slider-sketch.scss, not in this file.
 
 @import 'px-slider-sketch.scss';
 
-.slider {
-  border-color: var(--px-slider-border-color, $gray5);
-  background-color: var(--px-slider-background-color, $gray1);
+.backgroundTrack {
+  stroke: var(--px-slider-border-color, $gray5);
+  fill: var(--px-slider-background-color, $gray1);
 }
 
-.slider__selected {
-  border-color: var(--px-slider-border-color--selected, $select-blue-pressed);
-  background-color: var(--px-slider-background-color--selected, $select-blue-default);
+.progressBar {
+  stroke: var(--px-slider-border-color--selected, $select-blue-pressed);
+  fill: var(--px-slider-background-color--selected, $select-blue-default);
 }
