--- a/sass/px-handle.scss
+++ b/sass/px-handle.scss
@@ -95,8 +95,8 @@ $px-handle-black : var(--px-handle-shadow-color, $black);
   }
 }
 
-#multiHandleSVG{
-  height: $inuit-base-spacing-unit--large*1.1;
-  width: $inuit-base-spacing-unit--large;
-  -moz-user-select: none;
-}
+// #multiHandleSVG{
+//   height: $inuit-base-spacing-unit--large*1.1;
+//   width: $inuit-base-spacing-unit--large;
+//   -moz-user-select: none;
+// }
