px-sliding-gauge component - ticks and labels

--- a/sass/px-sliding-gauge-demo.scss
+++ b/sass/px-sliding-gauge-demo.scss
@@ -16,7 +16,7 @@
 
 /*
 THIS FILE SHOULD CONTAIN ONLY ABSTRACT/'SKETCH' THEME RULES, NOT SPECIFIC TO PREDIX BRANDING
-Predix branding rules go in px-slider.scss, not in this file.
+Predix branding rules go in px-sliding-gauge.scss, not in this file.
 */
 
 //Settings
