px-sliding-gauge component - ticks and labels + styles

--- a/sass/px-sliding-gauge-demo.scss
+++ b/sass/px-sliding-gauge-demo.scss
@@ -9,7 +9,7 @@
  */
 
 //
-// Sass for the "sketch" notion of the px-slider component
+// Sass for the "sketch" notion of the px-sliding-gauge component
 //
 // @author
 //
