--- a/sass/px-sliding-gauge-predix.scss
+++ b/sass/px-sliding-gauge-predix.scss
@@ -68,6 +68,7 @@ $slider-tags-hover: '.slider-container:active, .slider-container:hover';
 .slider-container {
   padding: $inuit-base-spacing-unit $inuit-base-spacing-unit--large $inuit-base-spacing-unit--tiny;
   height: 135px;
+  border: solid 1px transparent;
 
   bands {
     .slider__band {
